# kge

kg-generation/: app.py  expanded_knowledge_graph_with_all_questions.gpickle  expanded_knowledge_graph_with_all_questions.gpickle.json  expanded_knowledge_graph_with_more_questions.gpickle  expanded_knowledge_graph_with_questions.gpickle  hindi_learning_tasks_with_examples.gpickle  knowledge_graph.gpickle  pyproject.toml  simpleExample.py  test.html
